--- a/mysti_tarot/package.json
+++ b/mysti_tarot/package.json
@@ -9,11 +9,13 @@
     "assets-manager": "^0.4.1",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "file-loader": "^6.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "url-loader": "^4.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
